--- a/src/android/res/layout/activity_video.xml
+++ b/src/android/res/layout/activity_video.xml
@@ -1,74 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-
+    android:keepScreenOn="true"
+    tools:context="com.docway.video.ConversationActivity">
 
     <include layout="@layout/content_video" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:gravity="center"
-        android:orientation="horizontal" >
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/mute_microphone"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="20dp"
+        android:src="@drawable/ic_microphone_on"
+        android:scaleType="center"
+        app:backgroundTint="#FDFDFD"
+        app:layout_constraintBottom_toBottomOf="@+id/end_call"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/end_call" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/switch_camera_action_fab"
-            app:backgroundTint="@color/colorBlack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fabSize="mini"
-            android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_switch_camera_512dp" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/close_camera"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:src="@drawable/ic_cam_on"
+        android:scaleType="center"
+        app:backgroundTint="#FDFDFD"
+        app:layout_constraintEnd_toStartOf="@+id/end_call"
+        app:layout_constraintStart_toEndOf="@+id/mute_microphone"
+        app:layout_constraintTop_toTopOf="@+id/end_call"
+        app:layout_constraintBottom_toBottomOf="@+id/end_call"/>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/local_video_action_fab"
-            app:backgroundTint="@color/colorBlack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
-            app:fabSize="mini"
-            android:src="@drawable/ic_videocam_green_24px" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/end_call"
+        app:backgroundTint="#CE4E4E"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="32dp"
+        android:scaleType="center"
+        android:src="@drawable/ic_end_call"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/connect_action_fab"
-            app:backgroundTint="@color/colorGreen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_call_white_24px" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/switch_camera"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/ic_switch_camera"
+        android:scaleType="center"
+        app:backgroundTint="#FDFDFD"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/end_call"
+        app:layout_constraintTop_toTopOf="@+id/end_call"/>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/disconnect_action_fab"
-            app:backgroundTint="@color/colorRed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_call_end_white_24px" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/mute_action_fab"
-            app:backgroundTint="@color/colorBlack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fabSize="mini"
-            android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_mic_green_24px" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/speaker_action_fab"
-            app:backgroundTint="@color/colorBlack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fabSize="mini"
-            android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_volume_down_green_24px" />
-
-    </LinearLayout>
-
-</android.support.design.widget.CoordinatorLayout>
+</android.support.constraint.ConstraintLayout>
