--- a/src/android/res/layout/content_video.xml
+++ b/src/android/res/layout/content_video.xml
@@ -1,59 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/video_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:keepScreenOn="true"
-    tools:showIn="@layout/activity_video"
-    android:background="@color/colorBlack">
+    tools:showIn="@layout/activity_video">
 
     <com.twilio.video.VideoView
-        android:id="@+id/thumbnail_video_view"
-        app:overlaySurface="true"
-        app:mirror="true"
-        android:visibility="gone"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:layout_margin="16dp"
-        android:layout_gravity="top|start"/>
-
-    <com.twilio.video.VideoView
-        android:id="@+id/primary_video_view"
+        android:id="@+id/remote_video"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <LinearLayout
+    <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:alpha="0.4"
+        android:background="@color/colorBlack"/>
+
+    <TextView
+        android:id="@+id/remote_identity"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/status_margin"
-        android:layout_gravity="top|center"
-        android:orientation="vertical">
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:orientation="vertical"
+        android:text="@string/loading"
+        android:textColor="@color/colorAccent"
+        android:textSize="16sp"
+        android:fontFamily="@font/maven_pro"
+        android:lines="1"
+        app:layout_constraintEnd_toStartOf="@id/stopwatch"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
+        app:layout_constraintTop_toTopOf="@+id/remote_video" />
 
-        <TextView
-            android:id="@+id/identity_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/status_margin"
-            android:layout_gravity="top|center"
-            android:orientation="vertical"
-            android:textColor="@color/colorAccent"
-            android:textSize="20sp"
-            android:text=""/>
+    <TextView
+        android:id="@+id/stopwatch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:textColor="@color/colorAccent"
+        android:textSize="16sp"
+        android:fontFamily="@font/maven_pro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
+        app:layout_constraintTop_toTopOf="@+id/remote_video"
+        tools:text="00:00" />
 
-        <TextView
-            android:id="@+id/video_status_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/status_margin"
-            android:layout_gravity="bottom|center"
-            android:orientation="vertical"
-            android:textColor="@color/colorAccent"
-            android:textSize="16sp"
-            android:text=""/>
+    <com.twilio.video.VideoView
+        android:id="@+id/local_video"
+        android:layout_width="80dp"
+        android:layout_height="100dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginTop="12dp"
+        app:overlaySurface="true"
+        app:mirror="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view" />
 
-    </LinearLayout>
-
-
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
